fix: make navbar sticky and ensure mobile menu stays visible
- Added sticky positioning to the navbar to keep it visible when scrolling.
- Fixed mobile menu positioning to ensure it stays visible and functional when scrolling.

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,10 +1,19 @@
 .navbar {
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    background-color: var(--background-start);
+    color: var(--secondary-color);
+}
+
+.navbar-container {
+    width: 87%;
+    max-width: 1200px;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 2rem 0;
-    background-color: var(--background-start);
-    color: var(--secondary-color);
+    padding: 1.5rem 0;
     overflow-x: hidden;
 }
 
@@ -55,13 +64,13 @@
     }
 
     .navbar__links {
-        position: absolute;
+        position: fixed;
         top: 70px;
         right: 0;
         flex-direction: column;
         background-color: var(--background-start);
         width: 100%;
-        height: calc(100vh - 80px);
+        height: calc(100vh - 70px);
         align-items: center;
         justify-content: center;
         gap: 2rem;
